task 1 code changes

--- a/apps/okreads/browser/src/app/app.component.html
+++ b/apps/okreads/browser/src/app/app.component.html
@@ -5,6 +5,7 @@
         <h1>okreads</h1>
         <div>
           <button
+          aria-label="reading list"
             data-testing="toggle-reading-list"
             mat-button
             (click)="drawer.toggle()"
@@ -23,7 +24,7 @@
     <div class="reading-list-container" data-testing="reading-list-container">
       <h2>
         My Reading List
-        <button mat-icon-button (click)="drawer.close()">
+        <button aria-label ="close reading list" mat-icon-button (click)="drawer.close()">
           <mat-icon>close</mat-icon>
         </button>
       </h2>
