--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -1,13 +1,14 @@
 <form [formGroup]="searchForm" (submit)="searchBooks()">
   <mat-form-field floatLabel="never">
     <input
+      aria-label="enter search text"
       autoFocus
       matInput
       type="search"
       placeholder="Search for books to add to your reading list"
       formControlName="term"
     />
-    <button mat-icon-button matSuffix>
+    <button mat-icon-button aria-label="search button" matSuffix>
       <mat-icon>search</mat-icon>
     </button>
   </mat-form-field>
@@ -21,7 +22,7 @@
       </div>
       <div class="book--content">
         <div class="book--content--cover">
-          <img src="{{ b.coverUrl }}" />
+          <img alt="book cover page" src="{{ b.coverUrl }}" />
         </div>
         <div class="book--content--info">
           <div><strong>Author:</strong> {{ b.authors.join(',') }}</div>
@@ -34,6 +35,7 @@
             <button
               mat-flat-button
               color="primary"
+              aria-label="want to read"
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
             >
@@ -48,7 +50,7 @@
 <ng-template #empty>
   <div class="empty">
     <p>
-      Try searching for a topic, for example "<a (click)="searchExample()"
+      Try searching for a topic, for example "<a class="link" (click)="searchExample()"
         >JavaScript</a
       >".
     </p>
