--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchForm" (submit)="searchBooks()">
+<form [formGroup]="searchForm" >
   <mat-form-field floatLabel="never">
     <input
       aria-label="enter search text"
@@ -8,6 +8,7 @@
       placeholder="Search for books to add to your reading list"
       formControlName="term"
     />
+    
     <button mat-icon-button aria-label="search button" matSuffix>
       <mat-icon>search</mat-icon>
     </button>
