--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -18,7 +18,7 @@
 <ng-container *ngIf="searchTerm; else empty">
   <div class="book-grid">
     <div class="book" data-testing="book-item" *ngFor="let b of books">
-      <div class="book--title">
+      <div data-testing="book-title" class="book--title">
         {{ b.title }}
       </div>
       <div class="book--content">
@@ -34,6 +34,7 @@
           <p [innerHTML]="b.description"></p>
           <div>
             <button
+            data-testing="add-book-to-readinglist"
               mat-flat-button
               color="primary"
               aria-label="want to read"
