code changes of marking book as finished

--- a/apps/okreads/browser/src/app/app.component.html
+++ b/apps/okreads/browser/src/app/app.component.html
@@ -24,7 +24,7 @@
     <div class="reading-list-container" data-testing="reading-list-container">
       <h2>
         My Reading List
-        <button aria-label ="close reading list" mat-icon-button (click)="drawer.close()">
+        <button data-testing="dialogue-close" aria-label ="close reading list" mat-icon-button (click)="drawer.close()">
           <mat-icon>close</mat-icon>
         </button>
       </h2>
